<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <ImageView
            android:id="@+id/picture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/event_image" />

        <TextView
            android:id="@+id/date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/title"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:ellipsize="marquee"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:text="@string/default_date"
            android:textColor="@color/colorSecondaryText"
            android:textSize="12sp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="72dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="5dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/picture"
            android:layout_alignWithParentIfMissing="true"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/default_title"
            android:textColor="@color/colorPrimaryText"
            android:textSize="14sp"
            android:layout_marginStart="72dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="5dp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/date"
            android:layout_alignRight="@+id/date"
            android:layout_below="@+id/title"
            android:text="@string/default_time"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorSecondaryText"
            android:textSize="12sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:layout_gravity="center"
        android:background="#CFD8DC" />
</LinearLayout>