<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rift.tifr.EventDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            >

            <ImageView
                android:id="@+id/tifr_pic"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                android:src="@drawable/about_us"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/backgroun_tint">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/title_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="12dp"
                android:text="@string/default_title"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:layout_gravity="center"
                android:background="@color/backgroun_tint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="12dp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="6dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:paddingRight="2dp"
                            android:src="@drawable/ic_location_on" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="LOCATION"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/room"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="6dp"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"
                        android:text="Earth"
                        android:lineSpacingMultiplier="1.2"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </LinearLayout>

                <View
                    android:layout_width="0.5px"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/backgroun_tint" />


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="6dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:paddingRight="2dp"
                            android:src="@drawable/ic_clock_time" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="DATE"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/date_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="6dp"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"
                        android:lineSpacingMultiplier="1.2"
                        android:text="@string/default_date"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />


                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:layout_gravity="center"
                android:background="@color/backgroun_tint" />

         <!--   <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="6dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:paddingRight="2dp"
                        android:src="@drawaic_person24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="LECTURER"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="6dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:text="Sir/Ma'am"
                    android:lineSpacingMultiplier="1.2"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </LinearLayout> -->

        </LinearLayout>

        <LinearLayout
            android:id="@+id/description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="EVENT ABSTRACT"
                android:paddingLeft="6dp"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.example.rift.tifr.Event.ExpandableTextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.5"
                android:padding="6dp"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="6dp"
                android:background="#fff"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:paddingRight="2dp"
                    android:src="@drawable/ic_info"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="#fff"
                    android:text="@string/default_notice"
                    android:textColor="#607D8B"
                    android:textSize="12sp" />

            </LinearLayout>



            <android.support.v7.widget.CardView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                app:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/mailButton"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email"
                    android:paddingTop="10dp"
                    android:text="@string/mail_button"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                app:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/calendarButton"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_event"
                    android:paddingTop="10dp"
                    android:text="@string/calendar_button"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                app:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/add_button"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_playlist_add"
                    android:paddingTop="10dp"
                    android:text="@string/add_button"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>


            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_style"
                android:text="For more info"
                android:textColor="#fff" />


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
